projects/advanced/06-k8s-system/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-system-service
  labels:
    app: k8s-system-app
spec:
  type: ClusterIP
  selector:
    app: k8s-system-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
