projects/advanced/06-k8s-system/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-system.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k8s-system-service
                port:
                  number: 80
